--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -7,8 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
+    "%matplotlib incline\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
