--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4237,7 +4237,7 @@
     }
    ],
    "source": [
-    "x = np.array([\"AUSTIN: LEVY AT AUSTIN FC\", \"DALLAS: BOTTLED BLONDE\", \"FORT WORTH: DICKIES ARENA\", \"HOUSTON: ARAMARK S & E\", \"SAN ANTONIO: ARAMARK S & E\"])\n",
+    "x = np.array([\"AUSTIN: LEVY AT AUSTIN FC\", \"DALLAS: BOTTLED BLONDE\", \"FW: DICKIES ARENA\", \"HOUSTON: ARAMARK S & E\", \"SA: ARAMARK S & E\"])\n",
     "y = np.array([1557176, 684006, 1074735, 2465474, 2172068])\n",
     "\n",
     "beersum_df = pd.DataFrame({\"BUSINESSES\":x, \"BEER SALES\":y})\n",
