--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e570dc58",
+   "id": "59ac667a",
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1945e0de",
+   "id": "191b723d",
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "41d3fccf",
+   "id": "b72f9248",
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "abced167",
+   "id": "29af9861",
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e1a65261",
+   "id": "237a7e45",
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b56b260f",
+   "id": "af9ecdec",
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "203d51aa",
+   "id": "35f17098",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2de3bd39",
+   "id": "42e0e2cf",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "95a84ca3",
+   "id": "15173a39",
    "metadata": {},
    "outputs": [
     {
@@ -2365,10 +2365,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "915980df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86ad5570baeb4a95acc049cf79646388",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
     "fig = gmaps.figure(center=(31.45, -95), zoom_level=6.5)\n",
